...
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_below="@id/rl_ArtistDetailsInner_style"
                                        android:gravity="center_horizontal">

                                        <TextView
                                            android:id="@+id/tv_ArtistLabel"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_margin="7dp" />

                                        <TextView
                                            android:id="@+id/tv_ArtistCountry"
...


                                </RelativeLayout>
                            </android.support.v7.widget.CardView>

                            <TextView
                                android:id="@+id/tv_ArtistBiography"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/cv_ArtistDetails_Inner"
                                android:layout_margin="7dp"
                                android:minLines="10" />

...
